# RapidRAG

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yaml
app/: main.py
config/: settings.py
